--- a/bubble.html
+++ b/bubble.html
@@ -83,10 +83,7 @@
             "text-anchor": "middle",
             "fill": "white"
           },
-          attr: {dy: "65px"},
-          centralClick: function() {
-            alert("Here is more details!!");
-          }
+          attr: {dy: "65px"}
         }
       },
       {
