--- a/bubble2.html
+++ b/bubble2.html
@@ -40,7 +40,7 @@
   <h1>NYC Restaurants Inspections</h1>
   <h2>Streets in each Boroughs with A grade restaurants</h2>
 </body>
-    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
    <br>
    <br>
    <br>
