--- a/actions.html
+++ b/actions.html
@@ -56,7 +56,7 @@ body { margin:0;top:0;right:0;bottom:0;left:0; text-align: center; }
   <br>
 
 <svg class="chart"></svg>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 
 
 <script>
