--- a/bubble2.html
+++ b/bubble2.html
@@ -104,7 +104,7 @@
             .attr("x", function(d, i) {return oR*(3*(1+i)-1);})
             .attr("y", (h+oR)/3)
         .style("fill", function(d,i) { return colVals(i); }) // #1f77b4
-            .attr("font-size", 15)
+            .attr("font-size", 30)
             .attr("text-anchor", "middle")
         .attr("dominant-baseline", "middle")
         .attr("alignment-baseline", "middle")
@@ -257,9 +257,9 @@
                 })          
                 .attr("font-size", function(d,ii){
                     if(i == ii)
-                        return 15*1.5;
+                        return 30*1.5;
                     else
-                        return 15*0.6;              
+                        return 30*0.6;              
                 });
      
             var signSide = -1;
@@ -295,7 +295,9 @@
 <html>
 <body>
 <h2>Well, everything is not as rosy as it looks like! Let's dig into the violations!</h2>
+<div>
   <button type="button" onClick="window.location='toiVio.html'">Click Me!</button>
+</div>
 </body>
 </html>
 
